# cardano-ledger-specs

./: cabal.project
.github/workflows/: haskell.yml
alonzo/impl/: cardano-ledger-alonzo.cabal
alonzo/impl/src/Cardano/Ledger/Alonzo/: Data.hs  Tx.hs  TxBody.hs
alonzo/impl/src/Cardano/Ledger/Alonzo/Rules/: Utxos.hs
alonzo/impl/test/lib/Test/Cardano/Ledger/Alonzo/Serialisation/: Generators.hs
nix/: sources.json
pivo/: cardano-ledger-pivo.cabal
pivo/src/Cardano/Ledger/: Pivo.hs
pivo/src/Cardano/Ledger/Pivo/: Rules.hs  TxBody.hs
pivo/src/Cardano/Ledger/Pivo/Rules/: Utxo.hs  Utxow.hs
semantics/executable-spec/src/Control/: SetAlgebra.hs
semantics/executable-spec/src/Control/Iterate/: SetAlgebra.hs
shelley-ma/impl/src/Cardano/Ledger/Mary/: Value.hs
shelley-ma/impl/src/Cardano/Ledger/ShelleyMA/: TxBody.hs
shelley-ma/shelley-ma-test/src/Test/Cardano/Ledger/: Allegra.hs  Mary.hs
shelley-ma/shelley-ma-test/test/Test/Cardano/Ledger/Mary/: Value.hs
shelley/chain-and-ledger/dependencies/non-integer/reference/: randomize.cpp
shelley/chain-and-ledger/executable-spec/: shelley-spec-ledger.cabal
shelley/chain-and-ledger/executable-spec/src/Cardano/Ledger/: Pretty.hs
shelley/chain-and-ledger/executable-spec/src/Shelley/Spec/Ledger/: BaseTypes.hs  LedgerState.hs  Rewards.hs  Slot.hs
shelley/chain-and-ledger/executable-spec/src/Shelley/Spec/Ledger/API/: Mempool.hs  Protocol.hs  Validation.hs  Wallet.hs
shelley/chain-and-ledger/shelley-spec-ledger-test/src/Test/Shelley/Spec/Ledger/Generator/: ShelleyEraGen.hs  Utxo.hs
